# occt-learning-path

./: README.md  learning path.md
Day1/: day1.md
Day1/bottle/: CMakeLists.txt
Day1/bottle/bottle/: CMakeLists.txt  bottle.cpp  bottle.h  main.cpp
Day2_3/: day2_3.md
Day2_3/topoExp/: CMakeLists.txt  bottle.brep
Day2_3/topoExp/src/: dumpshape.cpp  dumpshape.h  main.cpp
docs/: 架构、Modeling Data、BRep、拓扑结构.md
occt/: README.md
occt/install/vs2019-x64/: custom_vc14_64.bat  env.bat
occt/install/vs2019-x64/cmake/: OpenCASCADEApplicationFrameworkTargets.cmake  OpenCASCADECompileDefinitionsAndFlags-release.cmake  OpenCASCADEConfig.cmake  OpenCASCADEConfigVersion.cmake  OpenCASCADEDataExchangeTargets-release.cmake  OpenCASCADEDataExchangeTargets.cmake  OpenCASCADEFoundationClassesTargets.cmake  OpenCASCADEModelingAlgorithmsTargets-release.cmake  OpenCASCADEModelingAlgorithmsTargets.cmake  OpenCASCADEModelingDataTargets.cmake  OpenCASCADEVisualizationTargets-release.cmake  OpenCASCADEVisualizationTargets.cmake
occt/install/vs2019-x64/inc/: Standard_Version.hxx
occt/install/vs2019-x64/src/DrawResources/: DrawPlugin
occt/install/vs2019-x64/win64/vc14/lib/: TKBO.lib  TKBRep.lib  TKBin.lib  TKBinL.lib  TKBinTObj.lib  TKBinXCAF.lib  TKBool.lib  TKCAF.lib  TKCDF.lib  TKDE.lib  TKDECascade.lib  TKDEIGES.lib  TKDEOBJ.lib  TKDEPLY.lib  TKDESTL.lib  TKDEVRML.lib  TKExpress.lib  TKFeat.lib  TKFillet.lib  TKG2d.lib  TKG3d.lib  TKGeomAlgo.lib  TKGeomBase.lib  TKHLR.lib  TKHelix.lib  TKLCAF.lib  TKMath.lib  TKMesh.lib  TKMeshVS.lib  TKOffset.lib  TKOpenGl.lib  TKPrim.lib  TKRWMesh.lib  TKService.lib  TKShHealing.lib  TKStd.lib  TKStdL.lib  TKTObj.lib  TKTopAlgo.lib  TKV3d.lib  (+9 more)
